--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <div id="header">
             <nav id="main-nav">
-                    <li><a href=""></a>About</li>
-                    <li><a href=""></a>Portfolio</li>
-                    <li><a href=""></a>Context</li>
+                    <li><a href="index.html"></a>About</li>
+                    <li><a href="portfolio.html"></a>Portfolio</li>
+                    <li><a href="contact.html"></a>Contact</li>
                 </ul>
             </nav>
         <span id="hero-text">Steven Balerna</span>
@@ -42,6 +42,7 @@
            <p>I have been married for over two years to my beautiful wife, Shakira and I
             have a daughter, Sienna, who is a 
             little over four months old.</p> 
+            <p>In my spare time I enjoy haning out with my family and traveling.</p>
            <p> I have recently started UNCC Coding Boot Camp. 
             I was born in NJ when I was younger but moved to NC
             over 20 years ago. </p>  
